--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </div>
           </div>
         </div>
-        <div class="single_slider d-flex align-items-center slider_bg_2">
+        <div class="single_slider d-flex align-items-center slider_bg_3">
           <div class="container">
             <div class="row">
               <div class="col-xl-12">
@@ -331,87 +331,138 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-3 col-md-6 col-lg-4">
+          <div class="col-xl-4 col-md-6 col-lg-4">
             <div class="single_department">
               <div class="department_thumb">
-                <img src="img/department/1.png" alt="" />
+                <img src="img/department/anaesthesia.jpg" alt="" height="250" />
               </div>
               <div class="department_content">
-                <h3><a href="#">Anasthesia</a></h3>
-                <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                <a href="#" class="learn_more">Learn More</a>
+                <h3><a href="#">Anaesthesia</a></h3>
+                <p>
+                  Safe, tailored anesthesia for surgical comfort and safety.
+                </p>
+                <!-- <a href="#" class="learn_more">Learn More</a> -->
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6 col-lg-4">
+          <div class="col-xl-4 col-md-6 col-lg-4">
             <div class="single_department">
               <div class="department_thumb">
-                <img src="img/department/2.png" alt="" />
+                <img
+                  src="img/department/antenatal (1).jpg"
+                  alt=""
+                  height="250"
+                />
               </div>
               <div class="department_content">
                 <h3><a href="#">Antenatal And Maternity Care</a></h3>
-                <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                <a href="#" class="learn_more">Learn More</a>
+                <p>
+                  Comprehensive support throughout pregnancy and childbirth.
+                </p>
+                <!-- <a href="#" class="learn_more">Learn More</a> -->
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6 col-lg-4">
+          <div class="col-xl-4 col-md-6 col-lg-4">
             <div class="single_department">
               <div class="department_thumb">
-                <img src="img/department/3.png" alt="" />
+                <img src="img/department/antenatal.jpg" alt="" height="250" />
               </div>
               <div class="department_content">
                 <h3><a href="#">General Gynaecology</a></h3>
-                <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                <a href="#" class="learn_more">Learn More</a>
+                <p>Compassionate care for women's reproductive health needs.</p>
+                <!-- <a href="#" class="learn_more">Learn More</a> -->
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6 col-lg-4">
+          <div class="col-xl-4 col-md-6 col-lg-4">
             <div class="single_department">
               <div class="department_thumb">
-                <img src="img/department/4.png" alt="" />
+                <img
+                  src="img/department/Medicines_share.jpg"
+                  alt=""
+                  height="250"
+                />
               </div>
               <div class="department_content">
                 <h3><a href="#">Internal Medicine</a></h3>
-                <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                <a href="#" class="learn_more">Learn More</a>
+                <p>
+                  Expert diagnosis and treatment for adult health conditions.
+                </p>
+                <!-- <a href="#" class="learn_more">Learn More</a> -->
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6 col-lg-4">
+          <div class="col-xl-4 col-md-6 col-lg-4">
             <div class="single_department">
               <div class="department_thumb">
-                <img src="img/department/5.png" alt="" />
+                <img src="img/department/oncology.jpg" alt="" height="250" />
               </div>
               <div class="department_content">
                 <h3><a href="#">Medical Oncology</a></h3>
-                <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                <a href="#" class="learn_more">Learn More</a>
+                <p>Personalized cancer diagnosis, treatment, and management.</p>
+                <!-- <a href="#" class="learn_more">Learn More</a> -->
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6 col-lg-4">
+          <div class="col-xl-4 col-md-6 col-lg-4">
             <div class="single_department">
               <div class="department_thumb">
-                <img src="img/department/6.png" alt="" />
+                <img
+                  src="img/department/mentalhealth.jpg"
+                  alt=""
+                  height="250"
+                />
               </div>
               <div class="department_content">
                 <h3><a href="#">Mental Health</a></h3>
-                <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                <a href="#" class="learn_more">Learn More</a>
+                <p>Counseling and therapy for emotional well-being.</p>
+                <!-- <a href="#" class="learn_more">Learn More</a> -->
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6 col-lg-4">
+          <div class="col-xl-4 col-md-6 col-lg-4">
             <div class="single_department">
               <div class="department_thumb">
-                <img src="img/department/6.png" alt="" />
+                <img
+                  src="img/department/Paediatrics.jpeg"
+                  alt=""
+                  height="250"
+                />
               </div>
               <div class="department_content">
                 <h3><a href="#">Paediatrics</a></h3>
-                <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                <a href="#" class="learn_more">Learn More</a>
+                <p>Specialized care for children's health and development.</p>
+                <!-- <a href="#" class="learn_more">Learn More</a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-md-6 col-lg-4">
+            <div class="single_department">
+              <div class="department_thumb">
+                <img src="img/department/lab.jpeg" alt="" height="250" />
+              </div>
+              <div class="department_content">
+                <h3><a href="#">Medical Laboratory</a></h3>
+                <p>
+                  Accurate diagnostic testing for timely treatment planning.
+                </p>
+                <!-- <a href="#" class="learn_more">Learn More</a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-md-6 col-lg-4">
+            <div class="single_department">
+              <div class="department_thumb">
+                <img src="img/department/Pharmacy.jpg" alt="" height="250" />
+              </div>
+              <div class="department_content">
+                <h3><a href="#">Pharmacy</a></h3>
+                <p>
+                  Convenient access to prescription medications and expert
+                  counseling.
+                </p>
+                <!-- <a href="#" class="learn_more">Learn More</a> -->
               </div>
             </div>
           </div>
@@ -569,13 +620,13 @@
                 </div>
                 <div class="col-xl-6 col-md-6">
                   <div class="business_thumb">
-                    <img src="img/about/business.png" alt="" />
+                    <img src="img/about/clinic.jpg" alt="" />
                   </div>
                 </div>
               </div>
             </div>
-            <div
-              class="tab-pane fade"
+            <!-- <div
+              class="tab-pane fade disabled"
               id="profile"
               role="tabpanel"
               aria-labelledby="profile-tab"
@@ -629,7 +680,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -651,7 +702,7 @@
             <div class="expert_active owl-carousel">
               <div class="single_expert">
                 <div class="expert_thumb">
-                  <img src="img/experts/1.png" alt="" />
+                  <img src="img/experts/dekyi.jpg" alt="" />
                 </div>
                 <div class="experts_name text-center">
                   <h3>Dr. Kofi Dekyi</h3>
@@ -660,7 +711,7 @@
               </div>
               <div class="single_expert">
                 <div class="expert_thumb">
-                  <img src="img/experts/2.png" alt="" />
+                  <img src="img/experts/george.jpg" alt="" />
                 </div>
                 <div class="experts_name text-center">
                   <h3>Dr. George Prempeh</h3>
