--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
               </div>
               <div class="single_expert">
                 <div class="expert_thumb">
-                  <img src="img/experts/4.png" alt="" />
+                  <img src="img/experts/nanaado.jpg" alt="" />
                 </div>
                 <div class="experts_name text-center">
                   <h3>Dr. Nana Addo</h3>
