--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                       <li>
                         <a href="#">About Us <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
-                          <li><a href="elements.html">About Us</a></li>
-                          <li><a href="elements.html">Gallery</a></li>
-                          <li><a href="about.html">Doctors</a></li>
+                          <li><a href="about.html">About Us</a></li>
+                          <li><a href="">Gallery</a></li>
+                          <li><a href="Doctors.html">Doctors</a></li>
                           <!-- <li><a href="about.html">Blog</a></li> -->
                         </ul>
                       </li>
@@ -706,7 +706,16 @@
                 </div>
                 <div class="experts_name text-center">
                   <h3>Dr. Kofi Dekyi</h3>
-                  <span>Neurologist</span>
+                  <!-- <span>Neurologist</span> -->
+                </div>
+              </div>
+              <div class="single_expert">
+                <div class="expert_thumb">
+                  <img src="img/experts/salam.jpg" alt="" />
+                </div>
+                <div class="experts_name text-center">
+                  <h3>Dr Alimatu Salam</h3>
+                  <!-- <span>Neurologist</span> -->
                 </div>
               </div>
               <div class="single_expert">
@@ -715,10 +724,10 @@
                 </div>
                 <div class="experts_name text-center">
                   <h3>Dr. George Prempeh</h3>
-                  <span>Neurologist</span>
+                  <!-- <span>Neurologist</span> -->
                 </div>
               </div>
-              <div class="single_expert">
+              <!-- <div class="single_expert">
                 <div class="expert_thumb">
                   <img src="img/experts/3.png" alt="" />
                 </div>
@@ -726,26 +735,18 @@
                   <h3>Dr Amanda</h3>
                   <span>Neurologist</span>
                 </div>
-              </div>
+              </div> -->
               <div class="single_expert">
                 <div class="expert_thumb">
                   <img src="img/experts/nanaado.jpg" alt="" />
                 </div>
                 <div class="experts_name text-center">
                   <h3>Dr. Nana Addo</h3>
-                  <span>Neurologist</span>
+                  <!-- <span>Neurologist</span> -->
                 </div>
               </div>
-              <div class="single_expert">
-                <div class="expert_thumb">
-                  <img src="img/experts/1.png" alt="" />
-                </div>
-                <div class="experts_name text-center">
-                  <h3>Dr Alimatu Salam</h3>
-                  <span>Neurologist</span>
-                </div>
-              </div>
-              <div class="single_expert">
+
+              <!-- <div class="single_expert">
                 <div class="expert_thumb">
                   <img src="img/experts/2.png" alt="" />
                 </div>
@@ -753,7 +754,7 @@
                   <h3>Mirazul Alom</h3>
                   <span>Neurologist</span>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
