--- a/Department.html
+++ b/Department.html
@@ -102,11 +102,13 @@
                         </ul>
                       </li> -->
                       <li>
-                        <a href="#">About Us <i class="ti-angle-down"></i></a>
+                        <a href="about.html"
+                          >About Us <i class="ti-angle-down"></i
+                        ></a>
                         <ul class="submenu">
-                          <li><a href="elements.html">About Us</a></li>
-                          <li><a href="elements.html">Gallery</a></li>
-                          <li><a href="about.html">Doctors</a></li>
+                          <li><a href="about.html">About Us</a></li>
+                          <li><a href="">Gallery</a></li>
+                          <li><a href="Doctors.html">Doctors</a></li>
                           <!-- <li><a href="about.html">Blog</a></li> -->
                         </ul>
                       </li>
