--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
                         </ul>
                       </li> -->
                       <li>
-                        <a href="#">About Us <i class="ti-angle-down"></i></a>
+                        <a href="about.html"
+                          >About Us <i class="ti-angle-down"></i
+                        ></a>
                         <ul class="submenu">
                           <li><a href="about.html">About Us</a></li>
                           <li><a href="">Gallery</a></li>
