--- a/Doctors.html
+++ b/Doctors.html
@@ -159,7 +159,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="single_expert mb-40">
               <div class="expert_thumb">
-                <img src="img/experts/1.png" alt="" />
+                <img src="img/experts/dekyi.jpg" alt="" />
               </div>
               <div class="experts_name text-center">
                 <h3>Mirazul Alom</h3>
@@ -170,7 +170,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="single_expert mb-40">
               <div class="expert_thumb">
-                <img src="img/experts/2.png" alt="" />
+                <img src="img/experts/salam.jpg" alt="" />
               </div>
               <div class="experts_name text-center">
                 <h3>Mirazul Alom</h3>
@@ -181,7 +181,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="single_expert mb-40">
               <div class="expert_thumb">
-                <img src="img/experts/3.png" alt="" />
+                <img src="img/experts/george.jpg" alt="" />
               </div>
               <div class="experts_name text-center">
                 <h3>Mirazul Alom</h3>
@@ -192,51 +192,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="single_expert mb-40">
               <div class="expert_thumb">
-                <img src="img/experts/4.png" alt="" />
-              </div>
-              <div class="experts_name text-center">
-                <h3>Mirazul Alom</h3>
-                <span>Neurologist</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="single_expert mb-40">
-              <div class="expert_thumb">
-                <img src="img/experts/6.png" alt="" />
-              </div>
-              <div class="experts_name text-center">
-                <h3>Mirazul Alom</h3>
-                <span>Neurologist</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="single_expert mb-40">
-              <div class="expert_thumb">
-                <img src="img/experts/7.png" alt="" />
-              </div>
-              <div class="experts_name text-center">
-                <h3>Mirazul Alom</h3>
-                <span>Neurologist</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="single_expert mb-40">
-              <div class="expert_thumb">
-                <img src="img/experts/8.png" alt="" />
-              </div>
-              <div class="experts_name text-center">
-                <h3>Mirazul Alom</h3>
-                <span>Neurologist</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="single_expert mb-40">
-              <div class="expert_thumb">
-                <img src="img/experts/9.png" alt="" />
+                <img src="img/experts/nanaado.jpg" alt="" />
               </div>
               <div class="experts_name text-center">
                 <h3>Mirazul Alom</h3>
@@ -262,7 +218,7 @@
                 <p>Esteem spirit temper too say adieus.</p>
               </div>
               <div class="info_button">
-                <a href="#" class="boxed-btn3-white">+10 378 4673 467</a>
+                <a href="#" class="boxed-btn3-white">+233 546 592 555</a>
               </div>
             </div>
           </div>
