--- a/contact.html
+++ b/contact.html
@@ -376,9 +376,9 @@
               <div class="footer_widget">
                 <h3 class="footer_title">Address</h3>
                 <p>
-                  200, D-block, Green lane USA <br />
-                  +10 367 467 8934 <br />
-                  docmed@contact.com
+                  5 BLK W/ARA- Hudson Road, Asokwa, Kumasi-Ghana <br />
+                  +233 546 592 555 <br />
+                  info@walteraidenspecialistclinic.com
                 </p>
               </div>
             </div>
