--- a/index.html
+++ b/index.html
@@ -172,7 +172,13 @@
                     <br />
                     ensuring proven results and peace of mind.
                   </p>
-                  <a href="#" class="boxed-btn3">Check Our Services</a>
+                  <div class="Appointment">
+                    <div class="book_btn d-none d-lg-block">
+                      <a class="popup-with-form boxed-btn3" href="#test-form"
+                        >Make an Appointment</a
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -192,7 +198,13 @@
                     <br />
                     redefining wellness for mind, body, spirit.
                   </p>
-                  <a href="#" class="boxed-btn3">Check Our Services</a>
+                  <div class="Appointment">
+                    <div class="book_btn d-none d-lg-block">
+                      <a class="popup-with-form boxed-btn3" href="#test-form"
+                        >Make an Appointment</a
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -212,7 +224,13 @@
                     <br />
                     our team offers comprehensive care and support..
                   </p>
-                  <a href="#" class="boxed-btn3">Check Our Services</a>
+                  <div class="Appointment">
+                    <div class="book_btn d-none d-lg-block">
+                      <a class="popup-with-form boxed-btn3" href="#test-form"
+                        >Make an Appointment</a
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -868,9 +886,9 @@
               <div class="footer_widget">
                 <h3 class="footer_title">Address</h3>
                 <p>
-                  200, D-block, Green lane USA <br />
-                  +10 367 467 8934 <br />
-                  docmed@contact.com
+                  5 BLK W/ARA- Hudson Road, Asokwa, Kumasi-Ghana <br />
+                  +233 546 592 555 <br />
+                  info@walteraidenspecialistclinic.com
                 </p>
               </div>
             </div>
@@ -993,5 +1011,20 @@
         $(".js-example-basic-multiple").select2();
       });
     </script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+      (function () {
+        var s1 = document.createElement("script"),
+          s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = "https://embed.tawk.to/6627c16f1ec1082f04e5ec22/1hs5kn7o6";
+        s1.charset = "UTF-8";
+        s1.setAttribute("crossorigin", "*");
+        s0.parentNode.insertBefore(s1, s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
   </body>
 </html>
