--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Walter Aiden</title>
-    <meta name="description" content="" />
+    <title>Walter Aiden Specialist Clinic</title>
+    <meta name="description" content="Walter Aiden Specialist Clinic" />
+    <meta
+      name="keywords"
+      content="Walter Aiden Specialist Clinic, Clinic, Hospital, Health Care, Walter Aiden Asokwa, Walter Aiden Kumasi, Kumasi Hospital, Asokwa Hospital, Specialist Hospital, Anaesthesia, Antenatal and Maternity Care, General Gynaecology, Internal Medicine, Medical Laboratory, Pharmacy, Paediatrics, Medical Oncology, Mental Health"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
@@ -172,13 +177,7 @@
                     <br />
                     ensuring proven results and peace of mind.
                   </p>
-                  <div class="Appointment">
-                    <div class="book_btn d-none d-lg-block">
-                      <a class="popup-with-form boxed-btn3" href="#test-form"
-                        >Make an Appointment</a
-                      >
-                    </div>
-                  </div>
+                  <a href="#" class="boxed-btn3">Check Our Services</a>
                 </div>
               </div>
             </div>
@@ -198,13 +197,7 @@
                     <br />
                     redefining wellness for mind, body, spirit.
                   </p>
-                  <div class="Appointment">
-                    <div class="book_btn d-none d-lg-block">
-                      <a class="popup-with-form boxed-btn3" href="#test-form"
-                        >Make an Appointment</a
-                      >
-                    </div>
-                  </div>
+                  <a href="#" class="boxed-btn3">Check Our Services</a>
                 </div>
               </div>
             </div>
@@ -224,13 +217,7 @@
                     <br />
                     our team offers comprehensive care and support..
                   </p>
-                  <div class="Appointment">
-                    <div class="book_btn d-none d-lg-block">
-                      <a class="popup-with-form boxed-btn3" href="#test-form"
-                        >Make an Appointment</a
-                      >
-                    </div>
-                  </div>
+                  <a href="#" class="boxed-btn3">Check Our Services</a>
                 </div>
               </div>
             </div>
@@ -862,11 +849,11 @@
               <div class="footer_widget">
                 <h3 class="footer_title">Departments</h3>
                 <ul>
-                  <li><a href="#">Eye Care</a></li>
-                  <li><a href="#">Skin Care</a></li>
-                  <li><a href="#">Pathology</a></li>
-                  <li><a href="#">Medicine</a></li>
-                  <li><a href="#">Dental</a></li>
+                  <li><a href="#">Anaesthesia</a></li>
+                  <li><a href="#">Antenatal</a></li>
+                  <li><a href="#">Mental Health</a></li>
+                  <li><a href="#">Paediatrics</a></li>
+                  <li><a href="#">Pharmacy</a></li>
                 </ul>
               </div>
             </div>
