--- a/contact.html
+++ b/contact.html
@@ -42,17 +42,10 @@
           <div class="container">
             <div class="row">
               <div class="col-xl-6 col-md-6">
-                <div class="social_media_links">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                  <a href="#">
-                    <i class="fa fa-google-plus"></i>
-                  </a>
-                </div>
+                <div
+                  id="google_translate_element"
+                  class="d-md-block d-flex justify-content-center align-items-center"
+                ></div>
               </div>
               <div class="col-xl-6 col-md-6">
                 <div class="short_contact_list">
@@ -504,5 +497,22 @@
         },
       });
     </script>
+
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: "en",
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          },
+          "google_translate_element"
+        );
+      }
+    </script>
+
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script>
   </body>
 </html>
