--- a/Department.html
+++ b/Department.html
@@ -3,13 +3,33 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Walter Aiden</title>
+    <title>Walter Aiden Specialist Clinic | Departments</title>
     <meta name="description" content="" />
+    <meta
+      name="keywords"
+      content="Walter Aiden Specialist Clinic, Clinic, Hospital, Health Care, Walter Aiden Asokwa, Walter Aiden Kumasi, Kumasi Hospital, Asokwa Hospital, Specialist Hospital, Anaesthesia, Antenatal and Maternity Care, General Gynaecology, Internal Medicine, Medical Laboratory, Pharmacy, Paediatrics, Medical Oncology, Mental Health, Departments"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
     <!-- Place favicon.ico in the root directory -->
+
+    <!-- Open Graph Tags -->
+    <meta
+      property="og:title"
+      content="Walter Aiden Specialist Clinic | Departments"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://walteraiden.vercel.app/Department.html"
+    />
+    <meta
+      property="og:image"
+      content="https://walteraiden.vercel.app/img/logo.png"
+    />
+    <meta property="og:description" content="Walter Aiden Specialist Clinic" />
 
     <!-- CSS here -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
