--- a/index.html
+++ b/index.html
@@ -3,11 +3,41 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Walter Aiden Specialist Clinic</title>
+    <title>Walter Aiden Specialist Clinic | Home</title>
     <meta name="description" content="Walter Aiden Specialist Clinic" />
     <meta
       name="keywords"
       content="Walter Aiden Specialist Clinic, Clinic, Hospital, Health Care, Walter Aiden Asokwa, Walter Aiden Kumasi, Kumasi Hospital, Asokwa Hospital, Specialist Hospital, Anaesthesia, Antenatal and Maternity Care, General Gynaecology, Internal Medicine, Medical Laboratory, Pharmacy, Paediatrics, Medical Oncology, Mental Health"
+    />
+    <!-- Open Graph Tags -->
+    <meta
+      property="og:title"
+      content="Walter Aiden Specialist Clinic | Departments"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://walteraiden.vercel.app/index.html"
+    />
+    <meta
+      property="og:image"
+      content="https://walteraiden.vercel.app/img/logo.png"
+    />
+    <meta property="og:description" content="Walter Aiden Specialist Clinic" />
+
+    <!-- Twitter Card Tags -->
+    <meta
+      name="twitter:card"
+      content="https://walteraiden.vercel.app/img/logo.png"
+    />
+    <meta
+      name="twitter:title"
+      content="Walter Aiden Specialist Clinic | Departments"
+    />
+    <meta name="twitter:description" content="Walter Aiden Specialist Clinic" />
+    <meta
+      name="twitter:image"
+      content="https://walteraiden.vercel.app/img/logo.png"
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
