--- a/contact.html
+++ b/contact.html
@@ -320,7 +320,11 @@
               <div class="footer_widget">
                 <div class="footer_logo">
                   <a href="#">
-                    <img src="img/footer_logo.png" alt="" />
+                    <img
+                      src="img/logo.png"
+                      alt="Walter Aiden Logo"
+                      height="50"
+                    />
                   </a>
                 </div>
                 <p>
@@ -346,17 +350,18 @@
                     </li>
                   </ul>
                 </div>
+                <div id="google_translate_element"></div>
               </div>
             </div>
             <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
               <div class="footer_widget">
                 <h3 class="footer_title">Departments</h3>
                 <ul>
-                  <li><a href="#">Eye Care</a></li>
-                  <li><a href="#">Skin Care</a></li>
-                  <li><a href="#">Pathology</a></li>
-                  <li><a href="#">Medicine</a></li>
-                  <li><a href="#">Dental</a></li>
+                  <li><a href="#">Anaesthesia</a></li>
+                  <li><a href="#">Antenatal</a></li>
+                  <li><a href="#">Mental Health</a></li>
+                  <li><a href="#">Paediatrics</a></li>
+                  <li><a href="#">Pharmacy</a></li>
                 </ul>
               </div>
             </div>
@@ -396,9 +401,9 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | This template is made with
-                <i class="fa fa-heart-o" aria-hidden="true"></i> by
-                <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                All rights reserved
+
+                <a href="">Walter Aiden</a>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
             </div>
