--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="container">
             <div class="row">
               <div class="col-xl-6 col-md-6">
-                <div class="social_media_links">
+                <!-- <div class="social_media_links">
                   <a href="#">
                     <i class="fa fa-linkedin"></i>
                   </a>
@@ -75,7 +75,12 @@
                   <a href="#">
                     <i class="fa fa-google-plus"></i>
                   </a>
-                </div>
+                  
+                </div> -->
+                <div
+                  id="google_translate_element"
+                  class="d-md-block d-flex justify-content-center align-items-center"
+                ></div>
               </div>
               <div class="col-xl-6 col-md-6">
                 <div class="short_contact_list">
@@ -843,6 +848,7 @@
                     </li>
                   </ul>
                 </div>
+                <div id="google_translate_element"></div>
               </div>
             </div>
             <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
@@ -1013,5 +1019,22 @@
       })();
     </script>
     <!--End of Tawk.to Script-->
+
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: "en",
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          },
+          "google_translate_element"
+        );
+      }
+    </script>
+
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script>
   </body>
 </html>
