Added twitter card

--- a/Doctors.html
+++ b/Doctors.html
@@ -20,10 +20,7 @@
       property="og:url"
       content="https://walteraiden.vercel.app/Doctors.html"
     />
-    <meta
-      property="og:image"
-      content="https://walteraiden.vercel.app/img/logo.png"
-    />
+    <meta property="og:image" content=" " />
     <meta property="og:description" content="Walter Aiden Specialist Clinic" />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
