--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     />
     <meta
       property="og:image"
-      content="https://walteraiden.vercel.app/img/logo.png"
+      content="https://walteraiden.vercel.app/img/twittercard.png"
     />
     <meta property="og:description" content="Walter Aiden Specialist Clinic" />
 
     <!-- Twitter Card Tags -->
     <meta
       name="twitter:card"
-      content="https://walteraiden.vercel.app/img/logo.png"
+      content="https://walteraiden.vercel.app/img/twittercard.png"
     />
     <meta
       name="twitter:title"
