--- a/index.html
+++ b/index.html
@@ -940,22 +940,29 @@
                 <input id="datepicker" placeholder="Pick date" />
               </div>
               <div class="col-xl-6">
-                <input id="datepicker2" placeholder="Suitable time" />
+                <input type="time" placeholder="Suitable time" />
               </div>
               <div class="col-xl-6">
                 <select class="form-select wide" id="default-select" class="">
                   <option data-display="Select Department">Department</option>
-                  <option value="1">Eye Care</option>
-                  <option value="2">Physical Therapy</option>
-                  <option value="3">Dental Care</option>
+                  <option value="1">Anaesthesia</option>
+                  <option value="2">Antenatal and Maternity Care</option>
+                  <option value="3">General Oncology</option>
+                  <option value="4">Internal Medicine</option>
+                  <option value="4">Medical Oncology</option>
+                  <option value="4">Mental Health</option>
+                  <option value="4">Paediatrics</option>
+                  <option value="4">Medical Laboratory</option>
+                  <option value="4">Pharmacy</option>
                 </select>
               </div>
               <div class="col-xl-6">
                 <select class="form-select wide" id="default-select" class="">
                   <option data-display="Doctors">Doctors</option>
-                  <option value="1">Mirazul Alom</option>
-                  <option value="2">Monzul Alom</option>
-                  <option value="3">Azizul Isalm</option>
+                  <option value="1">Dr. Nana Addo</option>
+                  <option value="2">Dr. Kofi Dekyi</option>
+                  <option value="3">Dr. Alimatu Salam</option>
+                  <option value="3">Dr. George Prempeh</option>
                 </select>
               </div>
               <div class="col-xl-6">
@@ -966,6 +973,15 @@
               </div>
               <div class="col-xl-12">
                 <input type="email" placeholder="Email" />
+              </div>
+              <div class="col-xl-12">
+                <textarea
+                  name=""
+                  class="textarea"
+                  id=""
+                  cols="30"
+                  rows="10"
+                ></textarea>
               </div>
               <div class="col-xl-12">
                 <button type="submit" class="boxed-btn3">Confirm</button>
