--- a/bookings/appointments.html
+++ b/bookings/appointments.html
@@ -91,7 +91,7 @@
             <div class="row align-items-center">
               <div class="col-xl-3 col-lg-2">
                 <div class="logo">
-                  <a href="index.html">
+                  <a href="../index.html">
                     <img
                       src="../img/logo.png"
                       alt="Walter Aiden Logo"
@@ -100,12 +100,12 @@
                   </a>
                 </div>
               </div>
-              <div class="col-xl-6 col-lg-7">
+              <div class="col-xl-9 col-lg-7">
                 <div class="main-menu d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a class="active" href="index.html">home</a></li>
-                      <li><a href="Department.html">Department</a></li>
+                      <li><a class="active" href="../index.html">home</a></li>
+                      <li><a href="../Department.html">Department</a></li>
                       <!-- <li>
                           <a href="#">blog <i class="ti-angle-down"></i></a>
                           <ul class="submenu">
@@ -114,23 +114,23 @@
                           </ul>
                         </li> -->
                       <li>
-                        <a href="about.html"
+                        <a href="../about.html"
                           >About Us <i class="ti-angle-down"></i
                         ></a>
                         <ul class="submenu">
-                          <li><a href="about.html">About Us</a></li>
+                          <li><a href="../about.html">About Us</a></li>
                           <li><a href="">Gallery</a></li>
-                          <li><a href="Doctors.html">Doctors</a></li>
+                          <li><a href="../Doctors.html">Doctors</a></li>
                           <!-- <li><a href="about.html">Blog</a></li> -->
                         </ul>
                       </li>
-                      <li><a href="Doctors.html">Blog</a></li>
-                      <li><a href="contact.html">Contact</a></li>
+                      <li><a href="../Doctors.html">Blog</a></li>
+                      <li><a href="../contact.html">Contact</a></li>
                     </ul>
                   </nav>
                 </div>
               </div>
-              <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+              <!-- <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                 <div class="Appointment">
                   <div class="book_btn d-none d-lg-block">
                     <a class="popup-with-form" href="#test-form"
@@ -138,7 +138,7 @@
                     >
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="col-12">
                 <div class="mobile_menu d-block d-lg-none"></div>
               </div>
@@ -155,8 +155,8 @@
         <div class="row">
           <div class="col-xl-12">
             <div class="bradcam_text">
-              <h3>contact</h3>
-              <p><a href="index.html">Home /</a> contact</p>
+              <h3>Appointments Bookings</h3>
+              <p><a href="index.html">Home /</a> Appointments</p>
             </div>
           </div>
         </div>
@@ -175,6 +175,8 @@
                 <th scope="col">NAME</th>
                 <th scope="col">DEPARTMENTS</th>
                 <th scope="col">DOCTOR</th>
+                <th scope="col">DATE</th>
+                <th scope="col">TIME</th>
               </tr>
             </thead>
             <tbody>
@@ -183,16 +185,22 @@
                 <td>Mark</td>
                 <td>Otto</td>
                 <td>@mdo</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
                 <td>Jacob</td>
                 <td>Thornton</td>
                 <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
                 <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
+                <td>@twitter</td>
                 <td>@twitter</td>
               </tr>
             </tbody>
